update module03 homework